--- a/06-Python.Rmd
+++ b/06-Python.Rmd
@@ -662,15 +662,15 @@ get_mse(linreg)
 get_mse(quadreg)
 ```
 
-```{python}
-grid = {'lasso__alpha': np.logspace(-3, 0, 4)}
+```{python, include=FALSE}
+#grid = {'lasso__alpha': np.logspace(-3, 0, 4)}
 quadlasso = GridSearchCV(estimator=quadlasso_empty, 
 param_grid=grid, 
 cv=LeaveOneOut(), scoring='neg_mean_squared_error',
 n_jobs=4 
 )
 
-get_mse(quadlasso)
+#get_mse(quadlasso)
 ```
 
 
@@ -678,27 +678,23 @@ get_mse(quadlasso)
 
 K = 5 folds. The model used is the same as above. 
 
-```{python}
+```{python, include=FALSE}
 from sklearn.model_selection import KFold
-kfold = KFold(n_splits=5, shuffle=True, random_state=1)
+#kfold = KFold(n_splits=5, shuffle=True, random_state=1)
 
 def get_mse(model):
   mses = cross_val_score(estimator=model, X=X, y=y, cv=kfold, scoring='neg_mean_squared_error')
   return np.average(-mses)
-get_mse(linreg)
-get_mse(quadreg)
+#get_mse(linreg)
+#get_mse(quadreg)
 ```
 
 
-```{python}
-grid = {'lasso_alpha': np.logspace(-3,0,4)}
-quadlasso = GridSearchCV(estimator=quadlasso_empty, param_grid=grid, cv=kfold, scoring='neg_mean_squared_error')
+```{python, include=FALSE}
+#grid = {'lasso_alpha': np.logspace(-3,0,4)}
+#quadlasso = GridSearchCV(estimator=quadlasso_empty, param_grid=grid, cv=kfold, #scoring='neg_mean_squared_error')
 
-get_mse(quadlasso)
-```
-
-```{python}
-
+#get_mse(quadlasso)
 ```
 
 
